logs/mobility/build.make.074.log.stderr
In file included from /nfs/home/matthew/Swarmathon-ALSA/src/mobility/src/mobility.cpp:1:0:
/nfs/home/matthew/Swarmathon-ALSA/src/mobility/src/ALSAController.h:39:8: warning: extra tokens at end of #endif directive [enabled by default]
 #endif # End ALSAController_h
        ^
In file included from /nfs/home/matthew/Swarmathon-ALSA/src/mobility/src/ALSAController.cpp:1:0:
/nfs/home/matthew/Swarmathon-ALSA/src/mobility/src/ALSAController.h:39:8: warning: extra tokens at end of #endif directive [enabled by default]
 #endif # End ALSAController_h
        ^
/nfs/home/matthew/Swarmathon-ALSA/src/mobility/src/ALSAController.cpp: In member function ‘float ALSAController::calcHopkinsIndex()’:
/nfs/home/matthew/Swarmathon-ALSA/src/mobility/src/ALSAController.cpp:69:20: error: ‘space’ was not declared in this scope
     double min_x = space->getXMinBound();
                    ^
/nfs/home/matthew/Swarmathon-ALSA/src/mobility/src/ALSAController.cpp:99:33: error: ‘DBL_MAX’ was not declared in this scope
         double min_R_distance = DBL_MAX;
                                 ^
make[2]: *** [CMakeFiles/mobility.dir/src/ALSAController.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
/nfs/home/matthew/Swarmathon-ALSA/src/mobility/src/TargetDetectionEvent.cpp: In constructor ‘TargetDetectionEvent::TargetDetectionEvent(time_t, float, float, int)’:
/nfs/home/matthew/Swarmathon-ALSA/src/mobility/src/TargetDetectionEvent.cpp:10:22: error: no match for call to ‘(Coordinate) (float&, float&, int, time_t&)’
   position(x, y, 0, t);
                      ^
/nfs/home/matthew/Swarmathon-ALSA/src/mobility/src/TargetDetectionEvent.cpp: In member function ‘float TargetDetectionEvent::getX()’:
/nfs/home/matthew/Swarmathon-ALSA/src/mobility/src/TargetDetectionEvent.cpp:20:10: error: ‘x’ was not declared in this scope
   return x;
          ^
/nfs/home/matthew/Swarmathon-ALSA/src/mobility/src/TargetDetectionEvent.cpp: In member function ‘float TargetDetectionEvent::getY()’:
/nfs/home/matthew/Swarmathon-ALSA/src/mobility/src/TargetDetectionEvent.cpp:25:10: error: ‘y’ was not declared in this scope
   return y;
          ^
make[2]: *** [CMakeFiles/mobility.dir/src/TargetDetectionEvent.cpp.o] Error 1
make[1]: *** [CMakeFiles/mobility.dir/all] Error 2
make: *** [all] Error 2
